clean and reformat

--- a/examples/four-bar/main.css
+++ b/examples/four-bar/main.css
@@ -24,7 +24,7 @@ canvas {
   position: relative;
 }
 
-.loading .loader{
+.loading .loader {
   display: block;
 }
 
@@ -49,6 +49,10 @@ canvas {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
